--- a/templates/patient/index.html.twig
+++ b/templates/patient/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PatientController!{% endblock %}
+{% block title %} {{ parent() }} {% endblock %}
 
 {% block body %}
 <style>
@@ -8,13 +8,7 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1>Central Hospital Baroja</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/uadmin/finalProject/src/Controller/PatientController.php</code></li>
-        <li>Your template at <code>/home/uadmin/finalProject/templates/patient/index.html.twig</code></li>
-    </ul>
-</div>
+
 {% endblock %}
