--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
 		{% endblock %}
 	</head>
 	<div class="container-fluid m-0 mb-3 px-0">
-		<header class="p-4 bg-dark text-white m-0 w-100">
+		<header class="p-2 bg-dark text-white m-0 w-100">
 			<div class="container-fluid m-0">
 				<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 					<a href="/homepage" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -39,7 +39,7 @@
 		</header>
 	</div>
 	<div class="w-100 container-fluid fixed-bottom bg-dark m-0 mt-2">
-		<footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-4 border-top w-100">
+		<footer class="d-flex flex-wrap justify-content-between align-items-center  my-4 border-top w-100">
 			<div class="col-md-4 d-flex align-items-center">				
 				<span class="mb-3 mb-md-0 text-light">&copy; Central Hospital Baroja, Fake Street 123</span>
 			</div>
@@ -63,7 +63,7 @@
 		</footer>
 	</div>
 
-	<body style="background-image: url('./images/fondo.jpeg'); background-size: cover;">
+	<body style="background-image: url('./images/fondo.jpg'); background-size: cover;">
 		{% block body %}{% endblock %}        
 	</body>
 </html>
