--- a/templates/patient/index.html.twig
+++ b/templates/patient/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<h1 class="text-center display-3">{{name}}</h1>
+<h1 class="text-center display-3 text-info">{{name}}</h1>
 <div id="carouselSlider" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
   <div class="carousel-inner">
     <div class="carousel-item active w-60">
