--- a/templates/patient/modifypatient.html.twig
+++ b/templates/patient/modifypatient.html.twig
@@ -17,7 +17,7 @@
                 <input type="text" id="address" name="address" class="form-control text-center mx-auto w-50" value="{{ patient.address }}"><br>
 
                 <label for="specialty">Specialty:</label>
-                <input type="text" id="specialty" name="specialty" class="form-control text-center mx-auto w-50" value="{{ patient.speciality.getSpecialityName() }}"><br>
+                <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" value="{{ patient.speciality.getSpecialityName() }}"><br>
 
                 <button type="submit" class="btn bg-dark text-light">Modify</button>
     </div>
