--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
 					<a href="/homepage" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
 						<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
 					</a>
-					<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">										
+					<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 						<li>
 							<a href="/" class="nav-link px-2 text-secondary">Home</a>
 						</li>
@@ -32,15 +32,15 @@
 						<li>
 							<a href="/patientlist" class="nav-link px-2 text-white">Patients</a>
 						</li>
-						<li>
-					</ul>		
+						<li></li>
+					</ul>
 				</div>
 			</div>
 		</header>
 	</div>
 	<div class="w-100 container-fluid fixed-bottom bg-dark m-0 mt-2">
 		<footer class="d-flex flex-wrap justify-content-between align-items-center  my-4 border-top w-100">
-			<div class="col-md-4 d-flex align-items-center">				
+			<div class="col-md-4 d-flex align-items-center">
 				<span class="mb-3 mb-md-0 text-light">&copy; Central Hospital Baroja, Fake Street 123</span>
 			</div>
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -63,7 +63,6 @@
 		</footer>
 	</div>
 
-	<body style="background-image: url('./images/fondo.jpg'); background-size: cover;">
-		{% block body %}{% endblock %}        
-	</body>
-</html>
+	<body style="background-image: url('../images/fondo.jpg'); background-size: cover;"> {% block body %}{% endblock %}
+		</body>
+	</html>
