--- a/templates/patient/modifypatient.html.twig
+++ b/templates/patient/modifypatient.html.twig
@@ -19,7 +19,7 @@
                 <label for="specialty">Specialty:</label>
                 <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" value="{{ patient.speciality.getSpecialityName() }}"><br>
 
-                <button type="submit" class="btn bg-dark text-light">Modify</button>
+                <button type="submit" class="btn bg-dark text-light">Add Patient</button>
     </div>
 </form>
 {% endblock %}
