--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,9 @@
 			</div>
 		</header>
 	</div>
-	<div class="w-100 container-fluid fixed-bottom bg-dark m-0 mt-2">
+	
+	<div class="clear"></div>
+	<div class="w-100 container-fluid fixed-bottom bg-dark m-0 mt-2">	
 		<footer class="d-flex flex-wrap justify-content-between align-items-center  my-4 border-top w-100">
 			<div class="col-md-4 d-flex align-items-center">
 				<span class="mb-3 mb-md-0 text-light">&copy; Central Hospital Baroja, Fake Street 123</span>
