--- a/templates/patient/patientlist.html.twig
+++ b/templates/patient/patientlist.html.twig
@@ -4,17 +4,17 @@
 	<form class="col-3 col-lg-3 mb-3 mx-auto">
 		<input type="search" class="form-control form-control-dark" placeholder="Search by name" aria-label="Search">
 	</form>
-
+<a href="/patientlist/addpatient" class="btn bg-dark text-light">Add Patient</a>
 	<div class="list-group w-50 mx-auto p-fixed">
-		{% for patient in list %}
+		{% for patient in list |sort((a, b) => a.name <=> b.name) %}
 			<a href="/patient/{{patient.id}}" type="button" class="list-group-item list-group-item-action text-center">
-				<div class="d-flex justify-content-around">
-					<span>
+				<div class="d-flex justify-content-between ">
+					<span class="mx-5">
 						<b>Name:
 						</b>
 						{{patient.name}}
 						{{patient.surname}}</span>
-					<span>
+					<span class="mx-5">
 						<b>Specialty:
 						</b>
 						{{patient.speciality.getSpecialityName()}}</span>
