--- a/templates/patient/modifypatient.html.twig
+++ b/templates/patient/modifypatient.html.twig
@@ -8,16 +8,16 @@
 <form action="{{ path('modify', {'slug': slug}) }}" method="post">
     <div class="container-fluid text-center">
       <label for="name">Name:</label>
-                <input type="text" id="name" name="name" class="form-control text-center w-50 mx-auto" value="{{ patient.name }}"><br>
+                <input type="text" id="name" name="name" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.name }}"><br>
 
                 <label for="surname">Surname:</label>
-                <input type="text" id="surname" name="surname" class="form-control text-center w-50 mx-auto" value="{{ patient.surname }}"><br>
+                <input type="text" id="surname" name="surname" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.surname }}"><br>
 
                 <label for="address">Address:</label>
-                <input type="text" id="address" name="address" class="form-control text-center mx-auto w-50" value="{{ patient.address }}"><br>
+                <input type="text" id="address" name="address" class="form-control text-center mx-auto w-50" required="" value="{{ patient.address }}"><br>
 
                 <label for="specialty">Specialty:</label>
-                <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" value="{{ patient.speciality.getSpecialityName() }}"><br>
+                <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" required="" value="{{ patient.speciality.getSpecialityName() }}"><br>
 
                 <button type="submit" class="btn bg-dark text-light">Add Patient</button>
     </div>
