--- a/templates/patient/patientlist.html.twig
+++ b/templates/patient/patientlist.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<form class="col-3 col-lg-3 mb-3 mx-auto">
+	<form class="col-3 col-lg-4 mb-3 mx-auto">
 		<input type="search" class="form-control form-control-dark" placeholder="Search by name" aria-label="Search">
 	</form>
-<a href="/patientlist/addpatient" class="btn bg-dark text-light">Add Patient</a>
+	<div class="container-fluid d-flex justify-content-center">
+	<a href="/patientlist/addpatient" class="btn bg-dark text-light">Add Patient</a>	
+	</div>
+	<br>
 	<div class="list-group w-50 mx-auto p-fixed">
 		{% for patient in list |sort((a, b) => a.name <=> b.name) %}
 			<a href="/patient/{{patient.id}}" type="button" class="list-group-item list-group-item-action text-center">
@@ -22,6 +25,7 @@
 			</a>
 		{% endfor %}
 	</div>
+	<br><br><br><br>
 
 	{% block javascript %}
 		<script defer>
