--- a/templates/speciality/specialities.html.twig
+++ b/templates/speciality/specialities.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
-<div class="container-fluid">        
+<div class="container-fluid mt-5">        
 <div class="row m-auto d-flex justify-content-around">
 {% for speciality in specialities %}
 
