--- a/templates/patient/patientlist.html.twig
+++ b/templates/patient/patientlist.html.twig
@@ -18,9 +18,9 @@
 						{{patient.name}}
 						{{patient.surname}}</span>
 					<span class="mx-5">
-						<b>Specialty:
+						<b>Diagnosis:
 						</b>
-						{{patient.speciality.getSpecialityName()}}</span>
+						{{patient.diagnosis}}</span>
 				</div>
 			</a>
 		{% endfor %}
