--- a/templates/patient/addpatient.html.twig
+++ b/templates/patient/addpatient.html.twig
@@ -1,25 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{ parent() }}
+    {{ parent() }}
 {% endblock %}
 
 {% block body %}
 <form action="{{ path('addpatient') }}" method="post">
     <div class="container-fluid text-center">
-      <label for="name">Name:</label>
-                <input type="text" id="name" required="" name="name" class="form-control text-center w-50 mx-auto"><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name" required="" name="name" class="form-control text-center w-50 mx-auto"><br>
 
-                <label for="surname">Surname:</label>
-                <input type="text" id="surname" required="" name="surname" class="form-control text-center w-50 mx-auto" ><br>
+        <label for="surname">Surname:</label>
+        <input type="text" id="surname" required="" name="surname" class="form-control text-center w-50 mx-auto" ><br>
 
-                <label for="address">Address:</label>
-                <input type="text" id="address" required="" name="address" class="form-control text-center mx-auto w-50"><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" required="" name="address" class="form-control text-center mx-auto w-50"><br>
 
-                <label for="specialty">Specialty:</label>
-                <input type="text" id="speciality" required="" name="speciality" class="form-control text-center mx-auto w-50" ><br>
+        <label for="diagnosis">Diagnosis:</label>
+        <input type="text" id="diagnosis" required="" name="diagnosis" class="form-control text-center mx-auto w-50"><br>
 
-                <button type="submit" class="btn bg-dark text-light">Modify</button>
+        <label for="ssn">SSN:</label>
+        <input type="text" id="ssn" required="" name="ssn" class="form-control text-center mx-auto w-50"><br>
+
+        <label for="specialty">Specialty:</label>
+        <input type="text" id="speciality" required="" name="speciality" class="form-control text-center mx-auto w-50" ><br>
+
+        <button type="submit" class="btn bg-dark text-light">Add Patient</button>
     </div>
 </form>
 {% endblock %}
