--- a/templates/patient/modifypatient.html.twig
+++ b/templates/patient/modifypatient.html.twig
@@ -1,25 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{ parent() }}
+    {{ parent() }}
 {% endblock %}
 
 {% block body %}
 <form action="{{ path('modify', {'slug': slug}) }}" method="post">
     <div class="container-fluid text-center">
-      <label for="name">Name:</label>
-                <input type="text" id="name" name="name" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.name }}"><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.name }}"><br>
 
-                <label for="surname">Surname:</label>
-                <input type="text" id="surname" name="surname" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.surname }}"><br>
+        <label for="surname">Surname:</label>
+        <input type="text" id="surname" name="surname" class="form-control text-center w-50 mx-auto" required="" value="{{ patient.surname }}"><br>
 
-                <label for="address">Address:</label>
-                <input type="text" id="address" name="address" class="form-control text-center mx-auto w-50" required="" value="{{ patient.address }}"><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" class="form-control text-center mx-auto w-50" required="" value="{{ patient.address }}"><br>
 
-                <label for="specialty">Specialty:</label>
-                <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" required="" value="{{ patient.speciality.getSpecialityName() }}"><br>
+        <label for="diagnosis">Diagnosis:</label>
+        <input type="text" id="diagnosis" name="diagnosis" class="form-control text-center mx-auto w-50" required="" value="{{ patient.diagnosis }}"><br>
 
-                <button type="submit" class="btn bg-dark text-light">Add Patient</button>
+        <label for="ssn">SSN:</label>
+        <input type="text" id="ssn" name="ssn" class="form-control text-center mx-auto w-50" required="" value="{{ patient.ssn }}"><br>
+
+        <label for="specialty">Specialty:</label>
+        <input type="text" id="speciality" name="speciality" class="form-control text-center mx-auto w-50" required="" value="{{ patient.speciality.getSpecialityName() }}"><br>
+
+        <button type="submit" class="btn bg-dark text-light">Add Patient</button>
     </div>
 </form>
 {% endblock %}
