--- a/templates/patient/patientlist.html.twig
+++ b/templates/patient/patientlist.html.twig
@@ -1,32 +1,43 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<form class="col-3 col-lg-4 mb-3 mx-auto">
+	<form class="col-12 col-md-6 col-lg-4 mx-auto mb-3">
 		<input type="search" class="form-control form-control-dark" placeholder="Search by name" aria-label="Search">
 	</form>
-	<div class="container-fluid d-flex justify-content-center">
-	<a href="/patientlist/addpatient" class="btn bg-dark text-light">Add Patient</a>	
+
+	<div class="container-fluid d-flex justify-content-center mb-3">
+		<a href="/patientlist/addpatient" class="btn bg-dark text-light">Add Patient</a>
 	</div>
-	<br>
-	<div class="list-group w-50 mx-auto p-fixed">
-		{% for patient in list |sort((a, b) => a.name <=> b.name) %}
-			<a href="/patient/{{patient.id}}" type="button" class="list-group-item list-group-item-action text-center">
-				<div class="d-flex justify-content-between ">
-					<span class="mx-5">
-						<b>Name:
-						</b>
-						{{patient.name}}
-						{{patient.surname}}</span>
-					<span class="mx-5">
-						<b>Diagnosis:
-						</b>
-						{{patient.diagnosis}}</span>
+
+	<div class="container-fluid">
+		<div class="list-group mx-auto p-fixed w-50">
+			<a type="button" class="list-group-item list-group-item-action text-center">
+				<div class="d-flex justify-content-between">
+					<span class="col text-center">
+						<b>Name</b>
+					</span>
+					<span class="col text-center">
+						<b>Specialty:</b>
+					</span>
+					<span class="col text-center">
+						<b>Diagnosis:</b>
+					</span>
 				</div>
 			</a>
-		{% endfor %}
-	</div>
-	<br><br><br><br>
+			{% for patient in list |sort((a, b) => a.name <=> b.name) %}
+				<a href="/patient/{{patient.id}}" type="button" class="list-group-item list-group-item-action text-center">
+					<div class="d-flex justify-content-between">
+						<span class="col text-center">{{patient.name}}
+							{{patient.surname}}</span>
+						<span class="col text-center">{{patient.speciality.getSpecialityName()}}</span>
+						<span class="col text-center">{{patient.diagnosis}}</span>
+					</div>
 
+				</a>
+			{% endfor %}
+		</div>
+	</div>
+<br><br><br><br>
 	{% block javascript %}
 		<script defer>
 			document.addEventListener("DOMContentLoaded", function () {
